# ekigega_backend

./: .gitignore  .pre-commit-config.yaml  Endpoints.txt  README.md  backup.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_role_nom.py  0003_passwordresettoken.py  0004_alter_user_profile.py
apps/accounts/templates/: reset_password_email.html
apps/analytics/: serializers.py  urls.py
apps/analytics/services/: cache.py  cashflow.py  dashboard.py  kpis.py  sales.py  trends.py
apps/analytics/views/: dashboard.py  reports.py
apps/commerce/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/commerce/migrations/: 0001_initial.py  0002_alter_produit_entreprise_categorie.py  (+9 more)
apps/core/: admin_mixins.py  constants.py  mixins.py  models.py  permissions.py  views.py
apps/education/: admin.py  models.py  serializers.py  views.py
apps/exports/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/finance/: admin.py  apps.py  models.py  serializers.py  signals.py  views.py
apps/logs/: admin.py  apps.py  middleware.py  models.py  serializers.py  signals.py  views.py
apps/partners/: admin.py  models.py  serializers.py  views.py
apps/subscriptions/: admin.py  models.py  serializers.py  tasks.py  views.py
apps/tenants/: admin.py  models.py  serializers.py  views.py
ekigega/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+39 files in other folders)
